<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".EditAddress">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/add_a_new_address"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/edi_text_back"
                android:hint="@string/full_name"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="number"
                android:layout_margin="10dp"
                android:background="@drawable/edi_text_back"
                android:hint="@string/mobile_number"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/pinCode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/edi_text_back"
                android:hint="@string/pin_code"
                android:inputType="number"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/lane"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edi_text_back"
                android:hint="@string/flat_area_colony_street_village"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/landmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edi_text_back"
                android:hint="@string/landmark_e_g_near_apollo_hospital"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/edi_text_back"
                android:hint="@string/town_city"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edi_text_back"
                android:minHeight="40dp"
                android:padding="10dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:background="@color/greenDark"
        android:text="@string/save"
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
