<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReviewActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ReviewActivity">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="This is a product" />

            <RatingBar
                android:rating="4.5"
                android:progressTint="#FDD835"
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:text="@string/review"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/ratingBar" />

            <EditText
                android:id="@+id/review"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="top"
                android:hint="@string/leave_a_review_here"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/head" />

            <com.denzcoskun.imageslider.ImageSlider
                android:visibility="gone"
                android:id="@+id/imageSlider"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintTop_toBottomOf="@+id/review" />
            <Button
                android:text="@string/upload_image"
                android:backgroundTint="@color/redDark"
                android:id="@+id/uploadImage"
                android:layout_margin="10dp"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@id/imageSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:text="@string/save"
        android:background="@color/greenDark"
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

