<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactUsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ContactUsActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:elevation="5dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:padding="5dp"
                    android:text="@string/fill_details_and_send_contact_request"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_bg"
                    android:padding="10dp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/whatsapp_number" />

                <EditText
                    android:id="@+id/mobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_bg"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/topic" />

                <EditText
                    android:id="@+id/topic"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="top"
                    android:padding="10dp"
                    android:textColor="@color/black" />


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="2dp"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="1dp">

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="40dp"
                        android:padding="10dp" />

                </com.google.android.material.card.MaterialCardView>

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/imageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_margin="10dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/redDark"
                    android:text="@string/upload_image" />
                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/call"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/send_call_request" />

                    <Button
                        android:id="@+id/videoCall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/send_videocall_request" />
                    <Button
                        android:id="@+id/soilTestRequest"
                        android:backgroundTint="@color/redDark"
                        android:padding="10dp"
                        android:layout_margin="5dp"
                        android:text="request Soil test"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>-->
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <Button
        android:text="@string/send_request"
        android:background="@color/greenDark"
        android:id="@+id/send"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>
