<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
  <ImageView
      android:layout_width="80dp"
      android:layout_height="80dp"
       android:src="@drawable/smartphone_call"
      app:tint="@color/greenDark"
      android:padding="10dp"
      android:layout_margin="5dp"
      />
    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textAlignment="center"
        android:padding="5dp"
        android:text="@string/please_wai"
        />
    <com.mukesh.OtpView
        android:id="@+id/otpVw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:focusableInTouchMode="true"
        android:inputType="number"
        android:itemBackground="@drawable/phone_number_input"
        android:padding="10dp"
        android:textColor="@color/black"
        app:OtpItemCount="6"
        app:OtpLineColor="@color/greenDark"
        app:OtpViewType="line" />
  <LinearLayout
      android:orientation="horizontal"
      android:gravity="center_horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
     <TextView
         android:id="@+id/timer"
         android:padding="5dp"
         android:text="00 : 22"
         android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
      <TextView
          android:id="@+id/resend"
          android:padding="5dp"
          android:text="@string/send_otp_again"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
  </LinearLayout>
    <TextView
        android:id="@+id/close"
        android:text="Change mobile number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:id="@+id/done"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:background="@color/grey"
        android:gravity="center"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_baseline_check_24"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            app:tint="@color/white"
            android:scaleY="1.2"
            android:scaleX="1.2"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/white"
            android:text="@string/done"
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>